--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3624,7 +3624,7 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\JKG8AUNC\\Harley et al. - 1997 - Environmental controls over isoprene emission in d.pdf}
 }
 
-@article{harrisChangesLeafProperties2013a,
+@article{harrisChangesLeafProperties2013,
   title = {Changes in Leaf Properties across an Elevation Gradient in the {{Luquillo Mountains}}, {{Puerto Rico}}},
   author = {Harris, Nancy L. and Medina, Ernesto},
   date = {2013},
@@ -8290,6 +8290,22 @@
   keywords = {Canopy openness,French Guiana,leaf morphology,photosynthesis,rain forest,tree size},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2000.00395.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\LS4U6QU7\\Rijkers et al. - 2000 - The effect of tree height and light availability o.pdf;C\:\\Users\\Me\\Zotero\\storage\\VFV8QBRF\\j.1365-2435.2000.00395.html}
+}
+
+@article{robertsStomatalBoundaryLayerConductances1990,
+  title = {Stomatal and {{Boundary}}-{{Layer Conductances}} in an {{Amazonian}} Terra {{Firme Rain Forest}}},
+  author = {Roberts, John and Cabral, Osvaldo M. R. and Aguiar, Leandro Ferreira De},
+  date = {1990-04},
+  journaltitle = {The Journal of Applied Ecology},
+  volume = {27},
+  number = {1},
+  eprint = {2403590?origin=crossref},
+  eprinttype = {jstor},
+  pages = {336},
+  issn = {00218901},
+  doi = {10.2307/2403590},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HETF62CV\\Roberts et al. - 1990 - Stomatal and Boundary-Layer Conductances in an Ama.pdf}
 }
 
 @article{robertsStomatalBoundaryLayerConductances1990a,
