--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9408,6 +9408,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\J4ZMEVRE\\Slot et al. - 2021 - Leaf heat tolerance of 147 tropical forest species.pdf}
 }
 
+@article{slotPhotosyntheticHeatTolerance2019,
+  title = {Photosynthetic Heat Tolerance of Shade and Sun Leaves of Three Tropical Tree Species},
+  author = {Slot, Martijn and Krause, G. Heinrich and Krause, Barbara and Hernández, Georgia G. and Winter, Klaus},
+  date = {2019-07},
+  journaltitle = {Photosynth Res},
+  volume = {141},
+  number = {1},
+  pages = {119--130},
+  issn = {0166-8595, 1573-5079},
+  doi = {10.1007/s11120-018-0563-3},
+  url = {http://link.springer.com/10.1007/s11120-018-0563-3},
+  urldate = {2020-07-17},
+  abstract = {Previous studies of heat tolerance of tropical trees have focused on canopy leaves exposed to full sunlight and high temperatures. However, in lowland tropical forests with leaf area indices of 5–6, the vast majority of leaves experience varying degrees of shade and a reduced heat load compared to sun leaves. Here we tested whether heat tolerance is lower in shade than in sun leaves. For three tropical tree species, Calophyllum inophyllum, Inga spectabilis, and Ormosia macrocalyx, disks of fully developed shade and sun leaves were subjected to 15-min heat treatments, followed by measurement of chlorophyll a fluorescence after 48 h of recovery. In two of the three species, the temperature causing a 50\% decrease of the fluorescence ratio Fv/Fm (T50) was significantly lower (by \textasciitilde\,1.0 °C) in shade than in sun leaves, indicating a moderately decreased heat tolerance of shade leaves. In shade leaves of these two species, the rise in initial fluorescence, F0, also occurred at lower temperatures. In the third species, there was no shade-sun difference in T50. In situ measurements of photosynthetic C­ O2 assimilation showed that the optimum temperature for photosynthesis tended to be lower in shade leaves, although differences were not significant. At supra-optimal temperatures, photosynthesis was largely constrained by stomatal conductance, and the high-temperature C­ O2 compensation point, TMax, occurred at considerably lower temperatures than T50. Our study demonstrates that the temperature response of shade leaves of tropical trees differs only marginally from that of sun leaves, both in terms of heat tolerance and photosynthetic performance.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3TTRP4X7\\Slot et al. - 2019 - Photosynthetic heat tolerance of shade and sun lea.pdf}
+}
+
 @article{slotPhotosyntheticHeatTolerance2019a,
   title = {Photosynthetic Heat Tolerance of Shade and Sun Leaves of Three Tropical Tree Species},
   author = {Slot, Martijn and Krause, G. Heinrich and Krause, Barbara and Hernández, Georgia G. and Winter, Klaus},
@@ -10546,6 +10563,22 @@
   abstract = {Few data are available describing the photosynthetic parameters of the leaves of tropical montane cloud forests (TMCF). Here, we present a study of photosynthetic leaf traits (Vcmax and Jmax), foliar dark respiration (Rd), foliar nitrogen (N) and phosphorus (P), and leaf mass per area (LMA) throughout the canopy for five different TMCF species at 3025~m a.s.l. in Andean Peru. All leaf traits showed a significant relationship with canopy height when expressed on an area basis, and Vcmax-area and Jmax-area almost halved when descending through the TMCF canopy. When corrected to a common temperature, average Vcmax and Jmax on a leaf area basis were similar to lowland tropical values, but lower when expressed on a mass basis, because of the higher TMCF LMA values. By contrast, Rd on an area basis was higher than found in tropical lowland forests at a common temperature, and similar to lowland forests on a mass basis. The TMCF Jmax–Vcmax relationship was steeper than in other tropical biomes, and we propose that this can be explained by either the light conditions or the relatively low VPD in the studied TMCF. Furthermore, Vcmax had a significant—though relatively weak and shallow—relationship with N on an area basis, but not with P, which is consistent with the general hypothesis that TMCFs are N rather than P limited. Finally, the observed Vcmax–N relationship (i.e., maximum photosynthetic nitrogen use efficiency) was distinctly different from those in tropical and temperate regions, probably because the TMCF leaves compensate for reduced Rubisco activity in cool environments.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\UG76LFJ3\\van de Weg et al. - 2012 - Photosynthetic parameters, dark respiration and le.pdf}
+}
+
+@article{vanwittenbergheVariabilityStomatalConductance2012,
+  title = {Variability of Stomatal Conductance, Leaf Anatomy, and Seasonal Leaf Wettability of Young and Adult {{European}} Beech Leaves along a Vertical Canopy Gradient},
+  author = {Van Wittenberghe, Shari and Adriaenssens, Sandy and Staelens, Jeroen and Verheyen, Kris and Samson, Roeland},
+  date = {2012-10-01},
+  journaltitle = {Trees},
+  volume = {26},
+  number = {5},
+  pages = {1427--1438},
+  issn = {1432-2285},
+  doi = {10.1007/s00468-012-0714-7},
+  url = {https://doi.org/10.1007/s00468-012-0714-7},
+  urldate = {2020-09-02},
+  abstract = {This study assessed the variation of leaf anatomy, chlorophyll content index (CCI), maximal stomatal conductance (gsmax) and leaf wettability within the canopy of an adult European beech tree (Fagus sylvatica L.) and for beech saplings placed along the vertical gradient in the canopy. At the top canopy level (CL28m) of the adult beech, CCI and leaf anatomy reflected higher light stress, while gsmaxincreased with height, reflecting the importance of gas exchange in the upper canopy layer. Leaf wettability, measured as drop contact angle, decreased from 85.5°~±~1.6° (summer) to 57.5°~±~2.8° (autumn) at CL28m of the adult tree. At CL22m, adult beech leaves seemed to be better optimized for photosynthesis than the CL28m leaves because of a large leaf thickness with less protective and impregnated substances, and a higher CCI. The beech saplings, in contrast, did not adapt their stomatal characteristics and leaf anatomy according to the same strategy as the adult beech leaves. Consequently, care is needed when scaling up experimental results from seedlings to adult trees.},
+  langid = {english}
 }
 
 @article{vanwittenbergheVariabilityStomatalConductance2012a,
