--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1243,23 +1243,6 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\RWAM8BVR\\Carter - 2017 - EFFECTS OF IN-SITU LEAF-LEVEL CANOPY WARMING IN A .pdf}
 }
 
-@article{carterExperimentalWarmingTropical,
-  title = {Experimental Warming across a Tropical Forest Canopy Height Gradient Reveals Minimal Photosynthetic and Respiratory Acclimation},
-  author = {Carter, Kelsey R. and Wood, Tana E. and Reed, Sasha C. and Butts, Kaylie M. and Cavaleri, Molly A.},
-  journaltitle = {Plant, Cell \& Environment},
-  volume = {n/a},
-  number = {n/a},
-  issn = {1365-3040},
-  doi = {10.1111/pce.14134},
-  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.14134},
-  urldate = {2021-07-12},
-  abstract = {Tropical forest canopies cycle vast amounts of carbon, yet we still have a limited understanding of how these critical ecosystems will respond to climate warming. We implemented in situ leaf-level + 3°C experimental warming from the understory to the upper canopy of two Puerto Rican tropical tree species, Guarea guidonia and Ocotea sintenisii. After approximately 1 month of continuous warming, we assessed adjustments in photosynthesis, chlorophyll fluorescence, stomatal conductance, leaf traits and foliar respiration. Warming did not alter net photosynthetic temperature response for either species; however, the optimum temperature of Ocotea understory leaf photosynthetic electron transport shifted upward. There was no Ocotea respiratory treatment effect, while Guarea respiratory temperature sensitivity (Q10) was down-regulated in heated leaves. The optimum temperatures for photosynthesis (Topt) decreased 3–5°C from understory to the highest canopy position, perhaps due to upper canopy stomatal conductance limitations. Guarea upper canopy Topt was similar to the mean daytime temperatures, while Ocotea canopy leaves often operated above Topt. With minimal acclimation to warmer temperatures in the upper canopy, further warming could put these forests at risk of reduced CO2 uptake, which could weaken the overall carbon sink strength of this tropical forest.},
-  langid = {english},
-  keywords = {electron transport,experimental leaf warming,photosynthesis,respiration,stomatal conductance,thermal acclimation},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.14134},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\5434TVT6\\Carter et al. - Experimental warming across a tropical forest cano.pdf;C\:\\Users\\Me\\Zotero\\storage\\PZZ3AEVE\\pce.html}
-}
-
 @article{carterExperimentalWarmingTropical2021,
   title = {Experimental Warming across a Tropical Forest Canopy Height Gradient Reveals Minimal Photosynthetic and Respiratory Acclimation},
   author = {Carter, Kelsey R. and Wood, Tana E. and Reed, Sasha C. and Butts, Kaylie M. and Cavaleri, Molly A.},
@@ -5956,6 +5939,23 @@
   langid = {english}
 }
 
+@article{mauTemperateTropicalForest2018,
+  title = {Temperate and {{Tropical Forest Canopies}} Are {{Already Functioning}} beyond {{Their Thermal Thresholds}} for {{Photosynthesis}}},
+  author = {Mau, Alida and Reed, Sasha and Wood, Tana and Cavaleri, Molly},
+  date = {2018-01-22},
+  journaltitle = {Forests},
+  volume = {9},
+  number = {1},
+  pages = {47},
+  issn = {1999-4907},
+  doi = {10.3390/f9010047},
+  url = {http://www.mdpi.com/1999-4907/9/1/47},
+  urldate = {2020-07-17},
+  abstract = {Tropical tree species have evolved under very narrow temperature ranges compared to temperate forest species. Studies suggest that tropical trees may be more vulnerable to continued warming compared to temperate species, as tropical trees have shown declines in growth and photosynthesis at elevated temperatures. However, regional and global vegetation models lack the data needed to accurately represent such physiological responses to increased temperatures, especially for tropical forests. To address this need, we compared instantaneous photosynthetic temperature responses of mature canopy foliage, leaf temperatures, and air temperatures across vertical canopy gradients in three forest types: tropical wet, tropical moist, and temperate deciduous. Temperatures at which maximum photosynthesis occurred were greater in the tropical forests canopies than the temperate canopy (30 ± 0.3 ◦C vs. 27 ± 0.4 ◦C). However, contrary to expectations that tropical species would be functioning closer to threshold temperatures, photosynthetic temperature optima was exceeded by maximum daily leaf temperatures, resulting in sub-optimal rates of carbon assimilation for much of the day, especially in upper canopy foliage ({$>$}10 m). If trees are unable to thermally acclimate to projected elevated temperatures, these forests may shift from net carbon sinks to sources, with potentially dire implications to climate feedbacks and forest community composition.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\R9SYE3II\\Mau et al. 2018.pdf}
+}
+
 @article{mauTemperateTropicalForest2018a,
   title = {Temperate and {{Tropical Forest Canopies}} Are {{Already Functioning}} beyond {{Their Thermal Thresholds}} for {{Photosynthesis}}},
   author = {Mau, Alida and Reed, Sasha and Wood, Tana and Cavaleri, Molly},
@@ -6871,6 +6871,24 @@
   isbn = {978-1-4020-9237-4},
   langid = {english},
   keywords = {Carbon Gain,Leaf Area Index,Plant Canopy,Plant Cell Environ,Versus Cmax}
+}
+
+@article{niinemetsPhotosynthesisResourceDistribution2007,
+  title = {Photosynthesis and Resource Distribution through Plant Canopies},
+  author = {Niinemets, Ülo},
+  date = {2007},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {30},
+  number = {9},
+  pages = {1052--1071},
+  issn = {1365-3040},
+  doi = {10.1111/j.1365-3040.2007.01683.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-3040.2007.01683.x},
+  urldate = {2020-08-02},
+  abstract = {Plant canopies are characterized by dramatic gradients of light between canopy top and bottom, and interactions between light, temperature and water vapour deficits. This review summarizes current knowledge of potentials and limitations of acclimation of foliage photosynthetic capacity (Amax) and light-harvesting efficiency to complex environmental gradients within the canopies. Acclimation of Amax to high light availability involves accumulation of rate-limiting photosynthetic proteins per unit leaf area as the result of increases in leaf thickness in broad-leaved species and volume : total area ratio and mesophyll thickness in species with complex geometry of leaf cross-section. Enhancement of light-harvesting efficiency in low light occurs through increased chlorophyll production per unit dry mass, greater leaf area per unit dry mass investment in leaves and shoot architectural modifications that improve leaf exposure and reduce within-shoot shading. All these acclimation responses vary among species, resulting in species-specific use efficiencies of low and high light. In fast-growing canopies and in evergreen species, where foliage developed and acclimated to a certain light environment becomes shaded by newly developing foliage, leaf senescence, age-dependent changes in cell wall characteristics and limited foliage re-acclimation capacity can constrain adjustment of older leaves to modified light availabilities. The review further demonstrates that leaves in different canopy positions respond differently to dynamic fluctuations in light availability and to multiple environmental stresses. Foliage acclimated to high irradiance respond more plastically to rapid changes in leaf light environment, and is more resistant to co-occurring heat and water stress. However, in higher light, co-occurring stresses can more strongly curb the efficiency of foliage photosynthetic machinery through reductions in internal diffusion conductance to CO2. This review demonstrates strong foliage potential for acclimation to within-canopy environmental gradients, but also highlights complex constraints on acclimation and foliage functioning resulting from light × foliage age interactions, multiple environmental stresses, dynamic light fluctuations and species-specific leaf and shoot structural constraints.},
+  langid = {english},
+  keywords = {acclimation kinetics,age effects,foliage aggregation,leaf longevity,leaf structure,light acclimation,nitrogen content,support costs,tocopherol content,xanthophyll cycle},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\IVA758DK\\Niinemets - 2007 - Photosynthesis and resource distribution through p.pdf;C\:\\Users\\Me\\Zotero\\storage\\AJYLGZFK\\j.1365-3040.2007.01683.html}
 }
 
 @article{niinemetsPhotosynthesisResourceDistribution2007a,
