--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1598,39 +1598,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\QT38IXYE\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf;C\:\\Users\\Me\\Zotero\\storage\\27HZSRMA\\ajb2.html}
 }
 
-@article{chitra-tarakHydraulicallyvulnerableTreesSurvive2021,
+@article{chitra-tarakHydraulicallyvulnerableTreesSurvive2021a,
   title = {Hydraulically-Vulnerable Trees Survive on Deep-Water Access during Droughts in a Tropical Forest},
   author = {Chitra-Tarak, Rutuja and Xu, Chonggang and Aguilar, Salomón and Anderson-Teixeira, Kristina J. and Chambers, Jeff and Detto, Matteo and Faybishenko, Boris and Fisher, Rosie A. and Knox, Ryan G. and Koven, Charles D. and Kueppers, Lara M. and Kunert, Nobert and Kupers, Stefan J. and McDowell, Nate G. and Newman, Brent D. and Paton, Steven R. and Pérez, Rolando and Ruiz, Laurent and Sack, Lawren and Warren, Jeffrey M. and Wolfe, Brett T. and Wright, Cynthia and Wright, S. Joseph and Zailaa, Joseph and McMahon, Sean M.},
-  date = {2021-05-16},
+  date = {2021},
   journaltitle = {New Phytologist},
-  volume = {n/a},
-  number = {n/a},
-  issn = {1469-8137},
-  doi = {10.1111/nph.17464},
-  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17464},
-  urldate = {2021-07-27},
-  abstract = {Deep-water access is arguably the most effective, but under-studied, mechanism that plants employ to survive during drought. Vulnerability to embolism and hydraulic safety margins can predict mortality risk at given levels of dehydration, but deep-water access may delay plant dehydration. Here, we tested the role of deep-water access in enabling survival within a diverse tropical forest community in Panama using a novel data-model approach. We inversely estimated the effective rooting depth (ERD, as the average depth of water extraction), for 29 canopy species by linking diameter growth dynamics (1990–2015) to vapor pressure deficit, water potentials in the whole-soil column, and leaf hydraulic vulnerability curves. We validated ERD estimates against existing isotopic data of potential water-access depths. Across species, deeper ERD was associated with higher maximum stem hydraulic conductivity, greater vulnerability to xylem embolism, narrower safety margins, and lower mortality rates during extreme droughts over 35 years (1981–2015) among evergreen species. Species exposure to water stress declined with deeper ERD indicating that trees compensate for water stress-related mortality risk through deep-water access. The role of deep-water access in mitigating mortality of hydraulically-vulnerable trees has important implications for our predictive understanding of forest dynamics under current and future climates.},
-  langid = {english},
-  keywords = {deep-water access,drought tolerance,drought-induced mortality,hydraulic vulnerability and safety margins,hydrological droughts,rooting depths,safety-efficiency trade-off,tropical forest},
-  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17464},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\J8DUYAJU\\Chitra-Tarak et al. - Hydraulically-vulnerable trees survive on deep-wat.pdf}
-}
-
-@article{chitra-tarakHydraulicallyvulnerableTreesSurvivea,
-  title = {Hydraulically-Vulnerable Trees Survive on Deep-Water Access during Droughts in a Tropical Forest},
-  author = {Chitra-Tarak, Rutuja and Xu, Chonggang and Aguilar, Salomón and Anderson-Teixeira, Kristina J. and Chambers, Jeff and Detto, Matteo and Faybishenko, Boris and Fisher, Rosie A. and Knox, Ryan G. and Koven, Charles D. and Kueppers, Lara M. and Kunert, Nobert and Kupers, Stefan J. and McDowell, Nate G. and Newman, Brent D. and Paton, Steven R. and Pérez, Rolando and Ruiz, Laurent and Sack, Lawren and Warren, Jeffrey M. and Wolfe, Brett T. and Wright, Cynthia and Wright, S. Joseph and Zailaa, Joseph and McMahon, Sean M.},
-  journaltitle = {New Phytologist},
-  volume = {n/a},
-  number = {n/a},
+  volume = {231},
+  number = {5},
+  pages = {1798--1813},
   issn = {1469-8137},
   doi = {10.1111/nph.17464},
   url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17464},
-  urldate = {2021-08-02},
+  urldate = {2021-09-02},
   abstract = {Deep-water access is arguably the most effective, but under-studied, mechanism that plants employ to survive during drought. Vulnerability to embolism and hydraulic safety margins can predict mortality risk at given levels of dehydration, but deep-water access may delay plant dehydration. Here, we tested the role of deep-water access in enabling survival within a diverse tropical forest community in Panama using a novel data-model approach. We inversely estimated the effective rooting depth (ERD, as the average depth of water extraction), for 29 canopy species by linking diameter growth dynamics (1990–2015) to vapor pressure deficit, water potentials in the whole-soil column, and leaf hydraulic vulnerability curves. We validated ERD estimates against existing isotopic data of potential water-access depths. Across species, deeper ERD was associated with higher maximum stem hydraulic conductivity, greater vulnerability to xylem embolism, narrower safety margins, and lower mortality rates during extreme droughts over 35 years (1981–2015) among evergreen species. Species exposure to water stress declined with deeper ERD indicating that trees compensate for water stress-related mortality risk through deep-water access. The role of deep-water access in mitigating mortality of hydraulically-vulnerable trees has important implications for our predictive understanding of forest dynamics under current and future climates.},
   langid = {english},
   keywords = {deep-water access,drought tolerance,drought-induced mortality,hydraulic vulnerability and safety margins,hydrological droughts,rooting depths,safety-efficiency trade-off,tropical forest},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17464},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\93WRSG8R\\Chitra-Tarak et al. - Hydraulically-vulnerable trees survive on deep-wat.pdf;C\:\\Users\\Me\\Zotero\\storage\\C54TWJ88\\nph.html}
+  file = {C\:\\Users\\Me\\Zotero\\storage\\46DJS4SR\\Chitra-Tarak et al. - 2021 - Hydraulically-vulnerable trees survive on deep-wat.pdf;C\:\\Users\\Me\\Zotero\\storage\\DUPUUE22\\nph.html}
 }
 
 @article{christoffersenLinkingHydraulicTraits2016,
@@ -3869,18 +3853,6 @@
   langid = {english},
   keywords = {<i>Populus</i>,heat stress,hybrid aspen,leaf temperature,photosynthesis inhibition,photosystem II,stomatal conductance,sunflecks},
   file = {C\:\\Users\\Me\\Zotero\\storage\\QR76ZG5A\\Hüve et al. - 2019 - Responses of Aspen Leaves to Heatflecks Both Dama.pdf}
-}
-
-@online{HydraulicallyVulnerableTreesa,
-  title = {Hydraulically‐vulnerable Trees Survive on Deep‐water Access during Droughts in a Tropical Forest - {{Chitra}}‐{{Tarak}} - - {{New Phytologist}} - {{Wiley Online Library}}},
-  url = {https://nph-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/nph.17464},
-  urldate = {2021-08-02}
-}
-
-@online{HydraulicallyVulnerableTreesb,
-  title = {Hydraulically‐vulnerable Trees Survive on Deep‐water Access during Droughts in a Tropical Forest - {{Chitra}}‐{{Tarak}} - - {{New Phytologist}} - {{Wiley Online Library}}},
-  url = {https://nph-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/10.1111/nph.17464},
-  urldate = {2021-08-02}
 }
 
 @article{ichieEcologicalDistributionLeaf2016,
