--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -19,7 +19,8 @@ fig_schematic = 1
 fig_NEON_vertical =  2
 fig_leaf_T = 3
 fig_treerings= 4 #not sure if we want to include one
-fig_model=5
+fig_ecosystem=5
+fig_model=6
 
 #tables
 table_leaf_traits=1
@@ -91,7 +92,7 @@ Kristina J. Anderson-Teixeira^1,2^*
 
 Text | word count | other | n
 ---|---|-----|--------------------
-Total word count (excluding summary, references and legends) | 	8565 |	No. of figures | 	5 (all colour)
+Total word count (excluding summary, references and legends) | 	8565 |	No. of figures | 	6 (all colour)
 Summary|  	183 | 	No. of Tables | 	2  
 Introduction|	497 |	No of Supporting Information files | 	6
 Review of vertical gradients |	5976	||	 
@@ -150,7 +151,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network [NEON; Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`; Supporting Information Methods `r appendix_NEON_methods`, @schimelNEONHierarchicallyDesigned2007].
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height [@lowmanForestCanopies1995]. 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites with contrasting forest structures in the National Ecological Observatory Network (NEON)**. Height profiles from the growing season are shown for: (a) leaf area density, (b) proportion of sun leaves, (c) proportion light incident at the top of the canopy, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Vertical profiles in micrometeorological variables (d-h) at all six NEON sites are shown in Fig. S1. Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`.](NEON_height_profiles/figures/profile_all.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites with contrasting forest structures in the National Ecological Observatory Network (NEON)**. Height profiles from the growing season are shown for: (a) leaf area density, (b) proportion of sun leaves, (c) proportion light incident at the top of the canopy, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Vertical profiles in micrometeorological variables (d-h) at all six NEON sites are shown in Supporting Information Figure `r SIfig_NEON_all`. Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`.](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
 Foliage distribution within a forest is determined by the distribution of tree sizes and tree architecture, along the vertical gradient by leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns that are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
@@ -339,7 +340,7 @@ These have generally found greater sensitivity to low precipitation or seasonall
 Despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraCarbonCyclingMature2021].
 However, exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
-Potential mechanisms for these patterns include stifling of understory $\lambda E$ under low wind, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis. Furthermore, warming-induced increases in nighttime respiratory carbon loss may be particularly disadvantageous for understory trees that are operating closer to their light-compensation point than canopy trees. Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
+Potential mechanisms for these patterns include stifling of understory $\lambda E$ under low wind, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. `r fig_leaf_T`) and lower photosynthesis. Furthermore, warming-induced increases in nighttime respiratory carbon loss may be particularly disadvantageous for understory trees that are operating closer to their light-compensation point than canopy trees. Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
 ![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees.** In column (a), across three sites and species, trees with large diameter breast height (DBH) had more negative growth responses to high temperatures during the current or previous growing season (denoted by c or p, respectively, on the x axes) than did small trees of the same species. Shown are tree ring width responses to the most influential temperature variable at the site ($T_{max}$ or PET) for the maximum and minimum tails of the DBH distribution included in the analysis.  Colored lines represent responses to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Vertical grey lines and shading indicate the long-term mean $\pm$ 1 standard deviation of the temperature variable. From Anderson-Teixeira et al. (in revision). In column (b), understory trees of four species had more negative growth responses to high growing season temperatures across eight New England forests. Growth is expressed as relativized basal area increment (BAI), where values > and < 100% indicate higher- or lower- than-average growth, respectively. Again, colored lines indicate modeled mean temperature responses and transparent ribbons indicate 95% confidence intervals. From @rollinsonClimateSensitivityUnderstory2020. ](tree_rings/Figure_4_tree_rings.png)
 
@@ -347,11 +348,11 @@ Potential mechanisms for these patterns include stifling of understory $\lambda 
 ### C and water flux
 
 **Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
-While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a; Kunert et al. 2017), and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime ~CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
+While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a; Kunert et al. 2017), and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime ~CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. `r fig_ecosystem`, Piponiot et al., accepted). 
 
-![**Figure 5.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/raw from Nobby/Fig_5_ET.png)
+![**Figure `r fig_ecosystem`.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
-**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. Further, increases in canopy $T_{leaf}$ are also shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
+**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. Further, increases in canopy $T_{leaf}$ are also shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 ## Implications [ & future research directions?]
 
@@ -391,7 +392,7 @@ Though an improvement over big-leaf models, DGVMs that separate the canopy into 
 
 **Scaling in situ data with remote sensing**
 
-Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. 6). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
+Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. `r fig_model`). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
 
 Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013]. In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LIDAR-based analyses [e.g., @davisLiDARderivedTopographyForest2019]. Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVertical2020 in review]. [@pauTropicalForestTemperature2018] used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than air temperatures or VPD. In a savanna system in the western U.S., [@johnstonWhatLiesVertical2020 in review] found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
